[package]
name = "topay-01"
version = "0.0.1"
edition = "2021"
description = "A lightweight, high-security cryptographic library optimized for mobile processors with quantum-resistant algorithms"
authors = ["TOPAY Foundation"]
license = "MIT"
repository = "https://github.com/MdShahriya/TOPAY-01"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.6"
hex = "0.4.3"
thiserror = "1.0.38"